--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "shark-js",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app/app.js",
   "scripts": {
     "build": "webpack",
     "build-watch": "webpack --watch",
@@ -15,10 +15,14 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
+    "css-loader": "^7.1.2",
+    "html-loader": "^5.1.0",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
     "webpack": "^5.95.0",
-    "webpack-cli": "^5.1.4",
-    "html-loader": "^5.1.0"
+    "webpack-cli": "^5.1.4"
   }
 }
