--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "Vladimir Parchev",
   "license": "ISC",
   "description": "",
-  "dependencies": { 
-    "highlight.js": "^11.11.1",  
+  "dependencies": {
+    "firebase": "^11.3.0",
+    "highlight.js": "^11.11.1",
     "http-server": "^14.1.1",
     "rxjs": "^7.8.1"
   },
@@ -22,10 +23,10 @@
     "sass": "^1.83.0",
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.11",
     "ts-loader": "^9.5.1",
     "typescript": "^5.6.2",
     "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "compression-webpack-plugin": "^11.1.0"
+    "webpack-cli": "^6.0.1"
   }
 }
