--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app/app.js",
   "scripts": {
     "build": "webpack",
-    "build-watch": "webpack --watch",
+    "build-watch": "webpack --watch --mode development",
+    "build-production": "webpack --mode production",
     "deploy": "firebase deploy",
     "serve": "http-server -p 8080"
   },
